Adding C++ support